[gd_scene load_steps=3 format=3 uid="uid://b5ltrp8a64t2b"]

[ext_resource type="Script" path="res://src/mainGame/entities/modules/AttackModule.gd" id="1_xfb67"]

[sub_resource type="CircleShape2D" id="CircleShape2D_sd14l"]
radius = 166.012

[node name="AttackModule" type="Node2D"]
script = ExtResource("1_xfb67")

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource("CircleShape2D_sd14l")

[node name="AttackTimer" type="Timer" parent="."]

[connection signal="area_entered" from="Area2D" to="." method="_on_area_2d_area_entered"]
[connection signal="area_exited" from="Area2D" to="." method="_on_area_2d_area_exited"]
[connection signal="timeout" from="AttackTimer" to="." method="_on_attack_timer_timeout"]
